# SpectrexSDK

./: LICENSE-examples.txt  LICENSE.txt  README.md
cmake/macos/: Spectrex-debug.cmake  Spectrex-release.cmake  Spectrex.cmake
cmake/msvc/v142/MD/Win32/: Spectrex-debug.cmake  Spectrex-release.cmake
cmake/msvc/v142/MD/x64/: Spectrex-debug.cmake  Spectrex-release.cmake
cmake/msvc/v142/MT/Win32/: Spectrex-debug.cmake  Spectrex-release.cmake
cmake/msvc/v142/MT/x64/: Spectrex-debug.cmake  Spectrex-release.cmake
cmake/msvc/v143/MD/Win32/: Spectrex-debug.cmake  Spectrex-release.cmake  Spectrex.cmake
cmake/msvc/v143/MD/x64/: Spectrex-debug.cmake  Spectrex-release.cmake
cmake/msvc/v143/MT/Win32/: Spectrex-debug.cmake  Spectrex-release.cmake
cmake/msvc/v143/MT/x64/: Spectrex-debug.cmake  Spectrex-release.cmake
docs/doxygen/html/: _component_8hpp_source.html  _context_8hpp_source.html  _data_8hpp_source.html  _exception_8hpp_source.html  _mini_processor_8hpp_source.html  _parameters_8hpp_source.html  _processor_8hpp_source.html  _ring_buffer_8hpp_source.html  _spectrogram_8hpp_source.html  _utility_8hpp_source.html  _waveform_8hpp_source.html  annotated.html  classes.html  classspectrex_1_1_exception-members.html  classspectrex_1_1_exception.html  classspectrex_1_1_k_component-members.html  classspectrex_1_1_k_component.html  classspectrex_1_1_k_context-members.html  classspectrex_1_1_k_context.html  classspectrex_1_1_k_processor-members.html  classspectrex_1_1_k_processor.html  classspectrex_1_1_k_spectrogram_component-members.html  classspectrex_1_1_k_spectrogram_component.html  classspectrex_1_1_k_waveform_component-members.html  classspectrex_1_1_k_waveform_component.html  classspectrex_1_1_mini_processor-members.html  classspectrex_1_1_mini_processor.html  classspectrex_1_1_processor_parameters-members.html  classspectrex_1_1_processor_parameters.html  classspectrex_1_1_ring_buffer-members.html  classspectrex_1_1_ring_buffer.html  dir_00476c7612082a2ea337592096689087.html  dir_03223e5d16191004a8cef135a83368eb.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4c291a68664e4432a22058616f5e4e52.html  dir_5b798d21554aadddca858521ec157964.html  dir_a47411af17e4acc7291c20de6e0cef6e.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  extra_8h_source.html  (+27 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  functions_1.js  functions_2.js  functions_3.js  (+25 more)
examples/: .clang-format  CMakeLists.txt  README.md
examples/Viz2DApp/: CMakeLists.txt  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Utility.h  WindowOpenGLContext.cpp  WindowOpenGLContext.h
examples/Viz2DApp/ParameterWindow/: ParameterDisplay.cpp  ParameterDisplay.h  ParameterWindow.cpp  ParameterWindow.h
examples/Viz2DApp/UI/: Cursor.cpp  Cursor.h  Visualization2DComponent.cpp  Visualization2DComponent.h  VisualizationComponent.cpp  VisualizationComponent.h
examples/Viz3DApp/: CMakeLists.txt  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Renderer.cpp  Renderer.h  Rendering.cpp  Rendering.h  WindowOpenGLContext.cpp  WindowOpenGLContext.h
examples/Viz3DApp/ParameterWindow/: ParameterDisplay.cpp  ParameterDisplay.h  ParameterWindow.cpp
examples/Viz3DApp/UI/: Cursor.cpp  Cursor.h  VisualizationComponent.cpp  VisualizationComponent.h  Visualizers2D.cpp  Visualizers2D.h
examples/Viz3DApp/shaders/: CMakeLists.txt  ToHeader.py  Visual1.frag  Visual1.vert  Visual2.frag  Visual3.frag  Visual3.geom  Visual3.vert
include/Spectrex/: MiniProcessor.hpp  extra.h
include/Spectrex/Components/: Component.hpp  Spectrogram.hpp  Waveform.hpp
include/Spectrex/Processing/: Data.hpp  Parameters.hpp  Processor.hpp
include/Spectrex/Rendering/: Context.hpp
include/Spectrex/Utility/: Exception.hpp  RingBuffer.hpp  Utility.hpp
lib/msvc/v142/MD/Win32/Release/: Spectrex.lib
lib/msvc/v142/MD/x64/Release/: Spectrex.lib
lib/msvc/v142/MT/Win32/Release/: Spectrex.lib
lib/msvc/v143/MD/Win32/Release/: Spectrex.lib
lib/msvc/v143/MD/x64/Release/: Spectrex.lib
lib/msvc/v143/MT/Win32/Release/: Spectrex.lib
src/Spectrex/: MiniProcessor.cpp
